--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -12,28 +12,20 @@
     <main>
           <h1> welcome to my website</h1>
           < img src="l'adresse   de l'image" width="150px" height ="150px" >
-          <p>---------------------------
-          -----------------------------
-          -
-          
-          ----------------------------------------
-          ---------------------------------------
-          --------------------------------------</p>
-        <table style="border: 2px dashed black, background_color : limegren  ">
+        <p>  and exchange information.  
           <tr> 
             <td   style="border: 2px doted black, background_color : red  ">
-              <img src="https://cdn.pixabay.com/photo/2024/04/25/04/00/flowers-8718879_640.jpg" width="30px" height=20px">
+              <img src="https://pixabay.com/illustrations/spheres-goku-dragon-anime-series-5499579/">
             </td>
-              <td>
-                  this is a beautiful flower
+              <td> this is goku
               </td>
           </tr>
             <tr>
-            <td  style="border: 2px doted black, background_color : red  ">
-                <img src="https://cdn.pixabay.com/photo/2024/04/19/04/39/kingfisher-8705377_1280.jpg">
+            <td>style="border: 2px doted black, background_color : red  ">
+                <img src="https://pixabay.com/illustrations/spheres-goku-dragon-anime-series-5499579/">
             </td>
-                <td>
-                    this is a birdy 
+                <td>this is a bird
+                    
                 </td>
           </tr>
         </table>        
