--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -37,7 +37,7 @@
      <footer>
          <h3>infos </h3>
          <p><i>adress : </i><b> rue zerktouni , n15 casablanca</b></p>
-         <p><i>phone_number</i> <b>06.89.75.15.24</b></p>
+         <p><i>phone_number</i> <b>05.37718888</b></p>
 
     </footer>
 
