--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,10 +2,10 @@
   <body>
     <header>
      <title>le titre de la page</title>
-     <img src="---- "  width="30px" height ="30px">
-      <a href="menu.html" >menu</a>
+     <img src=""  width="30px" height ="30px"
+      <a href=""</a>
       <a href="products.html" >menu</a>
-      <a href="table.html" >menu</a>  
+      <a href=
       <a href="description.html" >more about us </a>
     </header>
    
@@ -40,3 +40,6 @@
   </body>
 
 </html>
+<footer>
+<a 0537718888
+avenue sidi bouzid n5
