--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,13 +2,12 @@
   <body>
     <header>
      <title>le titre de la page</title>
-     <img src=""  width="30px" height ="30px"
+     <img src="https://cdn.pixabay.com/photo/2018/10/01/00/04/balls-3715032_640.jpg"
       <a href=""</a>
       <a href="products.html" >menu</a>
       <a href=
       <a href="description.html" >more about us </a>
     </header>
-   
     <main>
           <h1> welcome to my website</h1>
           < img src="l'adresse   de l'image" width="150px" height ="150px" >
@@ -40,6 +39,3 @@
   </body>
 
 </html>
-<footer>
-<a 0537718888>
-avenue sidi bouzid n5
